--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:e2e:postgres:windows": "set DBMS=postgres && docker-compose --env-file ./.env -f ./docker/docker-compose-postgres.yml up -d && jest --config ./test/jest-e2e.json",
     "start:mongodb": "export DBMS=mongodb; docker-compose --env-file ./.env -f ./docker/docker-compose-mongodb.yml up -d; npm run start:dev",
     "start:postgres": "export DBMS=postgres; docker-compose --env-file ./.env -f ./docker/docker-compose-postgres.yml up -d; npm run start:dev",
-    "start:postgres:windows": "set DBMS=postgres && docker-compose --env-file ./.env -f ./docker/docker-compose-postgres.yml up -d && npm run start:dev"
+    "start:postgres:windows": "set DBMS=postgres && docker-compose --env-file ./.env -f ./docker/docker-compose-postgres.yml up -d && npm run start:dev",
+    "prisma": "prisma"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -31,6 +32,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^5.13.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.1",
     "pg": "^8.11.4",
